# web_scraper

./: README.md  citation_needed.json  pyproject.toml  web_scraper.py
test/: test_web_scrap.py
web_scraper/: web_scraper.py
web_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
